# img-processing-cuda

src/gpu/: CMakeLists.txt  kernel.cu  kernel.cuh  kernelcall.cu  kernelcall.cuh  main.cu
