cmake_minimum_required(VERSION 3.5)
project(gpu_img_proc CUDA)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} -D WITH_CUDA=ON)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; "-arch=sm_86; -ccbin /usr/bin/gcc-11 ; -std=c++11; -O2; -DVERBOSE;") 
add_executable(main main.cu kernel.cu kernelcall.cu)
set_target_properties(main PROPERTIES CUDA_ARCHITECTURES "75;86")
target_link_libraries(main ${OpenCV_LIBS})
